--- a/Cargo.toml
+++ b/Cargo.toml
@@ -9,4 +9,7 @@ edition = "2018"
 [dependencies]
 num = "0.2.0"
 more-asserts = "0.2.1"
-# lapack = "0.16.0"
+lapack = "0.16.0"
+lapack-src = { version = "0.4", features = ["openblas"] }
+#lapack-sys = "0.12.1"
+#openblas-src = "0.5"
