--- a/Cargo.toml
+++ b/Cargo.toml
@@ -7,9 +7,8 @@ edition = "2018"
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
-num = "0.2.0"
-more-asserts = "0.2.1"
 lapack = "0.16.0"
 lapack-src = { version = "0.4", features = ["openblas"] }
-#lapack-sys = "0.12.1"
-#openblas-src = "0.5"
+more-asserts = "0.2.1"
+num = "0.2.0"
+rand = "0.6.5"
