--- a/Cargo.toml
+++ b/Cargo.toml
@@ -3,6 +3,8 @@ name = "arima"
 version = "0.1.0"
 authors = ["Kai Fricke <coding@kaifricke.com>"]
 edition = "2018"
+license = "Apache-2.0"
+license-file = "LICENSE"
 
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
