--- a/Cargo.toml
+++ b/Cargo.toml
@@ -20,7 +20,7 @@ travis-ci = { repository = "krfricke/arima", branch = "master" }
 
 [dependencies]
 lapack = "0.16.0"
-lapack-src = { version = "0.4", features = ["openblas"] }
+lapack-sys = "0.12.0"
 openblas-src = { version = "0.7.0", features = ["static"]}
 more-asserts = "0.2.1"
 num = "0.2.0"
