--- a/Cargo.toml
+++ b/Cargo.toml
@@ -18,10 +18,32 @@ exclude = [
 [badges]
 travis-ci = { repository = "krfricke/arima", branch = "master" }
 
+[features]
+default = ["openblas"]
+accelerate = ["accelerate-src"]
+intel-mkl = ["intel-mkl-src"]
+netlib = ["netlib-src"]
+openblas = ["openblas-src"]
+
 [dependencies]
 lapack = "0.16.0"
 lapack-sys = "0.12.0"
-openblas-src = { version = "0.7.0", features = ["system"]}
 more-asserts = "0.2.1"
 num = "0.2.0"
 rand = "0.6.5"
+
+[dependencies.accelerate-src]
+version = "0.3"
+optional = true
+
+[dependencies.intel-mkl-src]
+version = "0.4"
+optional = true
+
+[dependencies.netlib-src]
+version = "0.7"
+optional = true
+
+[dependencies.openblas-src]
+version = "0.7"
+optional = true
