--- a/Cargo.toml
+++ b/Cargo.toml
@@ -26,9 +26,11 @@ netlib = ["netlib-src"]
 [dependencies]
 lapack = "0.16.0"
 lapack-sys = "0.12.0"
+lbfgs = "0.2.1"
 more-asserts = "0.2.1"
 num = "0.2.0"
 rand = "0.6.5"
+optimization = "0.1.0"
 
 [dependencies.accelerate-src]
 version = "0.3"
