--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,7 +1,7 @@
 [package]
 name = "arima"
 description = "ARIMA time series modeling for Rust."
-version = "0.1.2"
+version = "0.1.3"
 authors = ["Kai Fricke <coding@kaifricke.com>"]
 edition = "2018"
 license-file = "LICENSE"
@@ -17,20 +17,23 @@ exclude = [
 travis-ci = { repository = "krfricke/arima", branch = "master" }
 
 [features]
-default = ["openblas", "openblas-src/system"]
-openblas = ["openblas-src"]
-accelerate = ["accelerate-src"]
-intel-mkl = ["intel-mkl-src"]
-netlib = ["netlib-src"]
+default = []
+openblas = ["lapack", "openblas-src"]
+accelerate = ["lapack", "accelerate-src"]
+intel-mkl = ["lapack", "intel-mkl-src"]
+netlib = ["lapack", "netlib-src"]
 
 [dependencies]
-lapack = "0.16.0"
-lapack-sys = "0.12.0"
 lbfgs = "0.2.1"
 more-asserts = "0.2.1"
 num = "0.2.0"
-rand = "0.6.5"
 optimization = "0.1.0"
+rand = "0.6.5"
+
+[dependencies.lapack]
+lapack = "0.16.0"
+lapack-sys = "0.12.0"
+optional = true
 
 [dependencies.accelerate-src]
 version = "0.3"
