--- a/Cargo.toml
+++ b/Cargo.toml
@@ -18,10 +18,10 @@ travis-ci = { repository = "krfricke/arima", branch = "master" }
 
 [features]
 default = []
-openblas = ["lapack", "openblas-src"]
-accelerate = ["lapack", "accelerate-src"]
-intel-mkl = ["lapack", "intel-mkl-src"]
-netlib = ["lapack", "netlib-src"]
+openblas = ["lapack", "lapack-sys", "openblas-src"]
+accelerate = ["lapack", "lapack-sys", "accelerate-src"]
+intel-mkl = ["lapack", "lapack-sys", "intel-mkl-src"]
+netlib = ["lapack", "lapack-sys", "netlib-src"]
 
 [dependencies]
 lbfgs = "0.2.1"
@@ -31,8 +31,11 @@ optimization = "0.1.0"
 rand = "0.6.5"
 
 [dependencies.lapack]
-lapack = "0.16.0"
-lapack-sys = "0.12.0"
+version = "0.16.0"
+optional = true
+
+[dependencies.lapack-sys]
+version = "0.12.0"
 optional = true
 
 [dependencies.accelerate-src]
