--- a/Cargo.toml
+++ b/Cargo.toml
@@ -24,11 +24,13 @@ intel-mkl = ["lapack", "lapack-sys", "intel-mkl-src"]
 netlib = ["lapack", "lapack-sys", "netlib-src"]
 
 [dependencies]
-more-asserts = "0.2.1"
-num = "0.2.0"
-rand = "0.7.3"
-finitediff = "0.1.2"
-rustimization = { git = "https://github.com/frnsys/rustimization" }
+more-asserts = "0.3.1"
+num = "0.4.1"
+rand = "0.8.5"
+rand_distr = "0.4.3"
+finitediff = "0.1.4"
+liblbfgs = "0.1.0"
+tracing = "0.1.40"
 
 [dependencies.lapack]
 version = "0.16.0"
