Use anyhow errors/results instead of custom error
Signed-off-by: Kai Fricke <coding@kaifricke.com>

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -31,6 +31,7 @@ rand_distr = "0.4.3"
 finitediff = "0.1.4"
 liblbfgs = "0.1.0"
 tracing = "0.1.40"
+anyhow = "1.0.75"
 
 [dependencies.lapack]
 version = "0.16.0"
